--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -11,22 +11,20 @@
     </div>
   <% end %>
 
-
-
-
   <div class="title">
     <%= form.label :title %>
   </div>
   <div class="title_text">
-    <%= form.text_field :title %>
+    <%= form.text_field :title, :size=>"90" %>
   </div>
   <div class="content">
     <%= form.label :content %>
   </div>
   <div class="content_text">
-    <%= form.text_field :content %>
+    <%= form.text_area :content, :size=>"120*30" %>
   </div>
-  <a class=square_btn>
+  <div class=square_btn>
     <%= form.submit %>
-  </a>
-<% end %>
+  </div>
+
+<%= link_to "ブログ一覧画面にもどる", blogs_path %>
