--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,5 +1,5 @@
 /*　button~　*/
-form.submit{
+div.form.submit{
     display: inline-block;
     padding: 0.5em 1em;
     text-decoration: none;
@@ -9,7 +9,7 @@ form.submit{
     border-radius: 3px;
     margin:  5% 45% 0% 45%;
 }
-form.submit:active {/*ボタンを押したとき*/
+div.form.submit:active {/*ボタンを押したとき*/
     -ms-transform: translateY(4px);
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*下に動く*/
