--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -14,17 +14,23 @@
     </div>
   <% end %>
 
+  <div class='input-group date datepicker'>
+   　<%= f.text_field :deadline, class:　'form-control' %>
+   　<span class="input-group-addon">
+    　   <span class="fa fa-calendar"></span>
+   　</span>
+  </div>
   <div class="title">
     <%= form.label :title %>
   </div>
   <div class="title_text">
-    <%= form.text_field :title, :size=>"100" %>
+    <%= form.text_field :title, :size=>"75" %>
   </div>
   <div class="content">
     <%= form.label :content %>
   </div>
   <div class="content_text">
-    <%= form.text_area :content, :size=>"110*50" %>
+    <%= form.text_area :content, :size=>"75*200" %>
   </div>
     <a class="square_btn">
       <%= form.submit %>
