--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -16,18 +16,10 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-4">
         <ul class="blog-panel">
-          <div class="blog_title_index">
-            <p>タイトル</p>
-          </div>
-          <div class="blog_title_index2">
-            <p><%= blog.title %></p>
-          </div>
-          <div class="blog_content_index">
-            <p>本文</p>
-          </div>
-          <div class="blog_content_index2">
-            <p><%= blog.content %></p>
-          </div>
+          <div class="blog_title_index">タイトル</div>
+          <div class="blog_title_index2"><%= blog.title %></div>
+          <div class="blog_content_index">本文</div>
+          <div class="blog_content_index2"><%= blog.content %></div>
         </ul>
 
         <div class="blog-links">
