--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -8,7 +8,7 @@
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
 <div class=past_blog>
-  <p>過去のブログ一覧</p>
+  過去のブログ一覧
 </div>
 
 <div class="container">
