--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,12 +18,12 @@
     <%= form.label :title %>
   </div>
   <div class="title_text">
-    <%= form.text_field :title, class="titile_text" %>
+    <%= form.text_field :title, class:"titile_text" %>
   </div>
   <div class="content">
     <%= form.label :content %>
   </div>
-    <%= form.text_area :content, class="content_text" %>
+    <%= form.text_area :content, class:"content_text" %>
     <a class="square_btn">
       <%= form.submit %>
     </a>
