--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -15,13 +15,13 @@
     <%= form.label :title %>
   </div>
   <div class="title_text">
-    <%= form.text_field :title, :size=>"87" %>
+    <%= form.text_field :title, class:"titile_text" %>
   </div>
   <div class="content">
     <%= form.label :content %>
   </div>
   <div class="content_text">
-    <%= form.text_area :content, :size=>"82*800" %>
+    <%= form.text_area :content, class:"content_text" %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
