--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -15,13 +15,13 @@
   <% end %>
 
   <div class="title">
-    <%= form.label :title %>
+    タイトル
   </div>
   <div class="title_text">
     <%= form.text_field :title, class:"titile_text" %>
   </div>
   <div class="content">
-    <%= form.label :content %>
+    本文
   </div>
     <%= form.text_area :content, class:"content_text" %>
     <a class="square_btn">
