--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="title">
-    <%= form.label :title %>
+    タイトル
   </div>
   <div class="title_text">
     <%= form.text_field :title, class:"titile_text" %>
   </div>
   <div class="content">
-    <%= form.label :content %>
+    本文
   </div>
   <div class="content_text">
     <%= form.text_area :content, class:"content_text" %>
