--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -78,7 +78,8 @@ div.title, div.content {
 /*　タイトル文章~　*/
 div.title_text {
   text-align: left;
-  width: 500px;
+  width: 1000px;
+  margin: 0% 15% 0% 15%;
   padding: 10px;
   border: solid 5px #ff7f50;
   background:#ffdab9;
@@ -88,7 +89,7 @@ div.title_text {
 /*　本文文章~　*/
 div.content_text {
   text-align: left;
-  width: 800px;
+  width: 1000px;
   margin: 0% 15% 0% 15%;
   padding: 10px;
   border: solid 5px #d3d3d3;
