--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,12 +18,12 @@
     タイトル
   </div>
   <div class="title_text">
-    <%= form.text_field :title, class:"titile_text" %>
+    <%= form.text_field :title, class:"titile_text", size: "990" %>
   </div>
   <div class="content">
     本文
   </div>
-    <%= form.text_area :content, class:"content_text" %>
+    <%= form.text_area :content, class:"content_text", size: "890*600" %>
     <a class="square_btn">
       <%= form.submit %>
     </a>
