--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -15,13 +15,13 @@
     タイトル
   </div>
   <div class="title_text">
-    <%= form.text_field :title, class:"titile_text" %>
+    <%= form.text_field :title, class:"titile_text" size: "990" %>
   </div>
   <div class="content">
     本文
   </div>
   <div class="content_text">
-    <%= form.text_area :content, class:"content_text" %>
+    <%= form.text_area :content, class:"content_text" size: "990*600" %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
