--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -79,7 +79,7 @@ div.title, div.content {
 div.title_text {
   text-align: left;
   width: 1000px;
-  margin: 0% 15% 0% 15%;
+  margin: auto;
   padding: 10px;
   border: solid 5px #ff7f50;
   background:#ffdab9;
@@ -90,7 +90,7 @@ div.title_text {
 div.content_text {
   text-align: left;
   width: 1000px;
-  margin: 0% 15% 0% 15%;
+  margin: auto;
   padding: 10px;
   border: solid 5px #d3d3d3;
   background:#fff;
