--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
 
   <header>
     <ul>
-      <li><a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ</a></li>
-      <li>せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
-      忘れないうちにブログを書こう、みんなに報告しよう！
+      <li>
+        <a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ
+        </a>
+      </li>
+      <li>
+        せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
+        忘れないうちにブログを書こう、みんなに報告しよう！
       </li>
     </ul>
   </header>
