--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -14,11 +14,11 @@
   <div class="title">
     タイトル
   </div>
-    <%= form.text_field :title, rows="1" cols="10" %>
+    <%= form.text_field :title, size: "90" %>
   <div class="content">
     本文
   </div>
-    <%= form.text_area :content, rows="7" cols="10" %>
+    <%= form.text_area :content, size: "90*6000" %>
   <div class=square_btn>
     <%= form.submit %>
   </div>
