--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,14 +17,14 @@
   <div class="title">
     タイトル
   </div>
-  <%= form.text_field :title, size: "90" %>
+  <%= form.text_field :title, size: "92" %>
   <div class="content">
     本文
   </div>
-  <%= form.text_area :content, size: "90*6000" %>
-  <a class="square_btn">
+  <%= form.text_area :content, size: "90×60" %>
+  <div class=square_btn>
     <%= form.submit %>
-  </a>
+  </div>
 <% end %>
 
 <%= link_to "ブログ一覧画面にもどる", blogs_path %>
