--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -18,7 +18,9 @@
   <div class="content">
     本文
   </div>
-  <%= form.text_area :content, size: "90×60" %>
+  <div class=text_area>
+    <%= form.text_area :content, %>
+  </div>
   <div class=square_btn>
     <%= form.submit %>
   </div>
