--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,7 +22,7 @@
     本文
   </div>
   <div class=text_area>
-    <%= form.text_area :content, %>
+    <%= form.text_area :content %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
