--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -19,7 +19,7 @@
     本文
   </div>
   <div class=text_area>
-    <%= form.text_area :content, %>
+    <%= form.text_area :content %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
