--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -78,8 +78,8 @@ div.title, div.content {
 
 /*　本文文章~　*/
 div.text_area {
-  width: 120px;
-  height: 80px !important;
+  width: 80%;
+  height: 800px !important;
 }
 /*　~本文文章　*/
 /*　タイトル文章　確認~　*/
