--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -19,8 +19,8 @@
     本文
   </div>
   <div class=text_area>
-    <%= form.text_area :content %>
-  </div>
+  <%= form.text_area :content, %>
+</div>
   <div class=square_btn>
     <%= form.submit %>
   </div>
