--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,7 +17,7 @@
   <div class="title">
     タイトル
   </div>
-  <%= form.text_field :title, size: "92" %>
+  <%= form.text_field :title, size: "1200px" %>
   <div class="content">
     本文
   </div>
@@ -28,5 +28,4 @@
     <%= form.submit %>
   </div>
 <% end %>
-
 <%= link_to "ブログ一覧画面にもどる", blogs_path %>
