--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -14,7 +14,7 @@
   <div class="title">
     タイトル
   </div>
-  <%= form.text_field :title, size: "92" %>
+  <%= form.text_field :title, size: "1080px" %>
   <div class="content">
     本文
   </div>
