--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -79,14 +79,16 @@ div.title, div.content {
 /*　本文文章~　*/
 div.text_area {
   width: 1100px;
-  height: 8000px !important;
+  height: 600px !important;
+  margin: 0% 15% 0% 15%;
+  padding: 10px;
 }
 /*　~本文文章　*/
 /*　タイトル文章　確認~　*/
 div.title_text {
   text-align: left;
   width: 1100px;
-  margin: auto;
+  margin: 0% 15% 0% 15%
   padding: 10px;
   border: solid 5px #ff7f50;
   background:#ffdab9;
@@ -97,7 +99,7 @@ div.title_text {
 div.content_text {
   text-align: left;
   width: 1100px;
-  margin: auto;
+  margin: 0% 15% 0% 15%
   padding: 10px;
   border: solid 5px #d3d3d3;
   background:#fff;
