--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -84,22 +84,23 @@ div.text_area {
   padding: 10px;
 }
 /*　~本文文章　*/
+
 /*　タイトル文章　確認~　*/
 div.title_text {
   text-align: left;
   width: 1100px;
-  margin: 0% 15% 0% 15%
-  padding: 10px;
+  margin: 0% 15% 0% 15%;
   border: solid 5px #ff7f50;
-  background:#ffdab9;
+  background: #ffdab9;
   word-break: break-all;
+  padding: 10px;
 }
 /*　~タイトル文章　確認*/
 /*　本文文章　確認~　*/
 div.content_text {
   text-align: left;
   width: 1100px;
-  margin: 0% 15% 0% 15%
+  margin: 0% 15% 0% 15%;
   padding: 10px;
   border: solid 5px #d3d3d3;
   background:#fff;
