--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -83,6 +83,12 @@ div.text_area {
   margin: 0% 15% 0% 15%;
   padding: 10px;
 }
+
+div.text_field {
+  width: 1100px;
+  margin: 0% 15% 0% 15%;
+  padding: 10px;
+}
 /*　~本文文章　*/
 
 /*　タイトル文章　確認~　*/
