--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,7 +17,9 @@
   <div class="title">
     タイトル
   </div>
-  <%= form.text_field :title, size: "1080px" %>
+  <div class=text_area>
+    <%= form.text_field :title %>
+  </div>
   <div class="content">
     本文
   </div>
