--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -79,12 +79,12 @@ div.title, div.content {
 /*　本文文章~　*/
 div.text_area {
   width: 1100px;
-  height: 600px !important;
+  height: 550px !important;
   margin: 0% 15% 0% 15%;
   padding: 10px;
 }
 
-div.text_field {
+div.text_title {
   width: 1100px;
   margin: 0% 15% 0% 15%;
   padding: 10px;
