--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,7 +17,7 @@
   <div class="title">
     タイトル
   </div>
-  <div class=text_area>
+  <div class=text_title>
     <%= form.text_field :title %>
   </div>
   <div class="content">
