--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -18,13 +18,13 @@
     タイトル
   </div>
   <div class=text_title>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, size:"1100px" %>
   </div>
   <div class="content">
     本文
   </div>
   <div class=text_area>
-    <%= form.text_area :content %>
+    <%= form.text_area :content, size:"1100px" %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
