--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -67,6 +67,10 @@ div.past_blog {
   margin-top: 100px;
 }
 
+div.blog-links {
+  bottom: 60px;
+}
+
 /*　表題~　*/
 div.title, div.content {
   text-align: left;
