--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="content">本文</div>
   <div class="content_text">
-    <%= simple.format(@blog.content) %>
+    <%= @blog.content %>
   </div>
   <a class="square_btn">
     <%= form.submit  "登録する" %>
