--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,3 +1,5 @@
+<h1>ブログ編集</h1>
+
 <%= form_with(model: @blog, local: true) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
