--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -5,7 +5,6 @@ div.square_btn{
     text-decoration: none;
     background-color: #ff7f50;/*ボタン色*/
     border-bottom: solid 4px #ff4500;
-    color: #fff;
     border-radius: 3px;
     margin:  5% 45% 0% 45%;
 }
@@ -83,8 +82,9 @@ div.title, div.content {
 /*　本文文章~　*/
 div.text_area {
   text-align: left;
-  width: auto;
+  width: 1100px;
   height: 300px !important;
+  margin: 0% 15% 0% 15%;
   padding: 10px;
 }
 
