--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
-<section class="main-header">
-  <img src="achieve.png">
-</section>
+<div class="yama">
+  <img src="images.jpg">
+</div>
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
 </div>
