--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,10 @@
 /*　button~　*/
+
+div.btn-group {
+  background-color: #ff7f50;
+  color: #fff;
+}
+
 div.square_btn{
     display: inline-block;
     padding: 0.5em 1em;
