--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="yama">
-  <img src="images.jpg">
+  <img src="./images/yama.jpg" >
 </div>
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
