--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="yama">
-  <img src=".app/assets/stylesheets/images/yama.png" >
+  <img src="app/assets/stylesheets/images/images.png" >
 </div>
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
