--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,4 @@
-<div class="yama">
-  <img src="app/assets/stylesheets/images/images.png" >
-</div>
+<img src="app/assets/stylesheets/images/images.png" class="yama">
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
 </div>
