--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,3 +1,11 @@
+
+.yama {
+  padding-bottom: 15%;
+  width: 100%;
+  background-size: cover;
+  background-image: url("header.jpg");
+  background-attachment: fixed;
+}
 /*　button~　*/
 
 div.btn-group {
@@ -6,21 +14,21 @@ div.btn-group {
 }
 
 div.square_btn{
-    display: inline-block;
-    padding: 0.5em 1em;
-    text-decoration: none;
-    background-color: #ff7f50;/*ボタン色*/
-    border-bottom: solid 4px #ff4500;
-    border-radius: 3px;
-    margin:  5% 45% 0% 45%;
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background-color: #ff7f50;/*ボタン色*/
+  border-bottom: solid 4px #ff4500;
+  border-radius: 3px;
+  margin:  5% 45% 0% 45%;
 }
 div.square_btn:active {/*ボタンを押したとき*/
-    -ms-transform: translateY(4px);
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);/*下に動く*/
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);/*影を小さく*/
-    border-bottom: none;
-    margin:  5% 45% 0% 45%;
+  -ms-transform: translateY(4px);
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);/*下に動く*/
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);/*影を小さく*/
+  border-bottom: none;
+  margin:  5% 45% 0% 45%;
 }
 /*　button~　*/
 
