--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -24,7 +24,7 @@
     本文
   </div>
   <div class=text_area>
-    <%= form.text_area :content, size:"90px" %>
+    <%= form.text_area :content, size:"90pxx30px" %>
   </div>
   <div class=square_btn>
     <%= form.submit %>
