--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,6 @@
-<img src="app/assets/stylesheets/images/images.png" class="yama">
+<div class="yama">
+  <%= image_tag "images.png"%>
+</div>
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
 </div>
