--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -23,7 +23,7 @@
     本文
   </div>
   <div class=text_area>
-  <%= form.text_area :content, size:"90px×30px" %>
+  <%= form.text_area :content, size:"90pxx30px" %>
 </div>
   <div class=square_btn>
     <%= form.submit %>
