--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,7 @@
 <div class="yama">
-  <%= image_tag "images.png"%>
+  <image src="images.jpg" >
 </div>
+
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
 </div>
