--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -39,7 +39,7 @@ body {
 }
 
 /*　~index　*/
-div.blog_title_index, div.blog_content_index {
+div.blog_title_index, div.blog_content_index, div.blog_id {
   text-align: left;
   color: #696969;
   font-size: 25px;
