--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="yama">
-  <image src="images.jpg" >
+  <%= image_tag "images.jpg" %>
 </div>
 
 <div class="index-msg">
@@ -20,6 +20,7 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-4">
         <ul class="blog-panel">
+          <div class="blog_id">No.<%= blog.id %></div>
           <div class="blog_title_index">タイトル</div>
           <div class="blog_title_index2"><%= blog.title %></div>
           <div class="blog_content_index">本文</div>
