--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,9 @@
-<div class="yama">
-  <img src="<%= asset_path "Saasy.jpg" %>">
+<div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="images.jpg" >
+    </a>
+  </div>
 </div>
 
 <div class="index-msg">
