--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,9 +1,7 @@
-<div class="row">
-  <div class="col-xs-6 col-md-3">
-    <a href="#" class="thumbnail">
-      <img src="images.jpg" >
-    </a>
-  </div>
+<div class="container-fluid">
+  <a href="#" class="thumbnail">
+    <img src="images.jpg">
+  </a>
 </div>
 
 <div class="index-msg">
