--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,8 +1,9 @@
 
-a.thumbnail {
+.images {
   padding-bottom: 15%;
   background-size: cover;
   background-attachment: fixed;
+  background-image: url(/images/images.jpg);
 }
 /*　button~　*/
 
