--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,5 @@
-<div class="container-fluid">
-  <a href="#" class="thumbnail">
-    <img src="images.jpg">
-  </a>
-</div>
+<img src="/images/images.jpg" />
+<div style="background-image:url(/images/images.jpg)" />
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
