--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,3 +1,10 @@
+div.container {
+  height: auto !important;
+  position: relative;
+  width: 100%;
+}
+
+
 header {
   width: 100%;
   background-color: #008080;
@@ -54,5 +61,4 @@ html {
 
 body {
   text-align: center;
-  height: auto !important;
 }
