--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,9 +1,10 @@
 
-.images {
+div.yama {
   padding-bottom: 15%;
+  width: 100%;
+  height: 140px;
   background-size: cover;
   background-attachment: fixed;
-  background-image: url(/images/images.jpg);
 }
 /*　button~　*/
 
