--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,6 @@
-<img src="/images/images.jpg" />
-<div style="background-image:url(/images/images.jpg)" />
+<div class="yama">
+  <img src="/images/images.jpg" />
+</div>
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
