--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,4 @@
-<div class="yama">
-  <img src="/images/images.jpg" />
-</div>
+<img src="/images/images.jpg" class="yama" />
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
