--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -11,7 +11,7 @@
   <div class="content">本文</div>
   <div class="content_text">
     <%= @blog.content %>
-  </div>
+  </div>cd
   <a class="square_btn">
     <%= form.submit  "登録する" %>
     <%= form.submit "もどる", name: 'back' %>
