--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,12 +1,14 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding: 0px;
+  padding-bottom: 0 10% 100px 10%;
   width: 100%;
+
 }
 
 
 header {
+  position: fixed;
   width: 100%;
   background-color: #008080;
   text-align: left;
@@ -39,13 +41,13 @@ header ul:after {
 }
 
 footer {
+  position: absolute;
   width: 100%;
   background-color: #008080;
   padding: 20px 0 10px 0;
   color: white;
   margin-left: auto;
   margin-right: auto;
-  position: absolute;
   bottom: 0;
   height: 100px;
 }
