--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,11 +1,9 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding-bottom: 0 10% 100px 10%;
+  padding: 99px 0 100px 0;
   width: 100%;
-
 }
-
 
 header {
   position: fixed;
