--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,7 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding: 99px 0 100px 0;
+  padding-bottom: 100px;
   width: 100%;
 }
 
