--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,7 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding-bottom: 100px;
+  padding: 99px 0 100px 0;
   width: 100%;
 }
 
@@ -10,6 +10,7 @@ header {
   width: 100%;
   background-color: #008080;
   text-align: left;
+  margin-top: 99px;
 }
 
 header ul {
