--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,7 +1,7 @@
 div.container {
   height: auto !important;
   position: relative;
-  padding: 99px 0 100px 0;
+  padding: 0 0 100px 0;
   width: 100%;
 }
 
@@ -10,19 +10,20 @@ header {
   width: 100%;
   background-color: #008080;
   text-align: left;
-  margin-top: 99px;
+  height: 200px
+  z-index: 999;
 }
 
-header ul {
+div.row {
   margin: 0 auto;
   list-style: none;
   color: white;
   padding-left: 50px;
 }
 
-header ul a {
+div.col-md-3 {
   display: block;
-  padding: 2px;
+  padding: 5px;
   text-decoration: none;
   color: white;
   font-size: 50px;
