--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,6 @@
-<img src="/images/images.jpg" class="yama" />
+<div class="yama">
+  <img src="/images/images.jpg" />
+</div>
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
