--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -10,7 +10,7 @@ header {
   width: 100%;
   background-color: #008080;
   text-align: left;
-  height: 200px
+  height: 200px;
   z-index: 999;
 }
 
