--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -2,7 +2,7 @@
 .yama {
   width: 100%;
   height: 400px;
-  margin-top: 200px;
+  margin-top: 150px;
   background-size: cover;
   background-attachment: fixed;
   object-fit: cover;
@@ -42,7 +42,7 @@ body {
 }
 
 /*　~index　*/
-div.blog_title_index, div.blog_content_index, div.blog_id {
+div.blog_title_index, div.blog_content_index {
   text-align: left;
   color: #696969;
   font-size: 25px;
@@ -78,6 +78,18 @@ div.index-msg {
   text-align: left;
   margin-left: 100px;
   color: #fff;
+  text-shadow: 1px 1px 0 #000,
+             -1px 1px 0 #000,
+             1px -1px 0 #000,
+             -1px -1px 0 #000;
+}
+
+div.new-blog-link {
+  color: #fff;
+  text-shadow: 1px 1px 0 #000,
+               -1px 1px 0 #000,
+               1px -1px 0 #000,
+               -1px -1px 0 #000;
 }
 
 div.past_blog {
