--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,4 @@
-<div class="yama">
-  <img src="/images/images.jpg" />
-</div>
+<img src="/images/images.jpg" class="yama" />
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
@@ -8,7 +6,7 @@
 
 <h1>新規ブログを作成する</h1>
 
-<div id="new-blog-link">
+<div class="new-blog-link">
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
 <div class=past_blog>
@@ -20,7 +18,6 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-4">
         <ul class="blog-panel">
-          <div class="blog_id"><%= blog.id %></div>
           <div class="blog_title_index">タイトル</div>
           <div class="blog_title_index2"><%= blog.title %></div>
           <div class="blog_content_index">本文</div>
