--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,10 +2,8 @@
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
+  <h1>新規ブログを作成する</h1>
 </div>
-
-<h1>新規ブログを作成する</h1>
-
 <div class="new-blog-link">
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
@@ -18,6 +16,7 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-4">
         <ul class="blog-panel">
+          <div class="blog_id"><%= blog.id %></div>
           <div class="blog_title_index">タイトル</div>
           <div class="blog_title_index2"><%= blog.title %></div>
           <div class="blog_content_index">本文</div>
