--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           忘れないうちにブログを書こう、みんなに報告しよう！
         </div>
         <div class="col-md-3">
-          <h1><%= link_to 'TRY !!', new_blog_path %></h1>
+          <%= link_to 'TRY !!', new_blog_path %>
         </div>
       </div>
     </header>
