--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,7 +1,7 @@
 /*　画像~　*/
 .yama {
   width: 100%;
-  height: 400px;
+  height: 300px;
   margin-top: 150px;
   background-size: cover;
   background-attachment: fixed;
@@ -76,7 +76,8 @@ ul.blog-panel {
 
 div.index-msg {
   text-align: left;
-  margin-left: 100px;
+  font-size: 30px;
+  margin: 50px 100px 0 0;
   color: #fff;
   text-shadow: 1px 1px 0 #000,
              -1px 1px 0 #000,
@@ -86,6 +87,7 @@ div.index-msg {
 
 div.new-blog-link {
   color: #fff;
+  font-size: 30px;
   text-shadow: 1px 1px 0 #000,
                -1px 1px 0 #000,
                1px -1px 0 #000,
