--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<img src="/images/images.jpg" class="yama" />
+<img src="/images/yama.jpg" class="yama" />
 
 <div class="index-msg">
   <p>" TRY !! "をクリックするだけ🎶<p>
