--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,9 +1,9 @@
-<img src="/images/yama.jpg" class="yama" />
-
-<div class="index-msg">
+<div class="yama">
+  <img src="/images/yama.jpg" />
   <p>" TRY !! "をクリックするだけ🎶<p>
-  <h1>新規ブログを作成する</h1>
+  <h2>新規ブログを作成する</h2>
 </div>
+
 <div class="new-blog-link">
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
