--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,20 @@
     <header>
       <div class="row">
         <div class="col-md-3">
-          <a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ</a>
+          <div class="header1">
+            <a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ</a>
+          </div>
         </div>
         <div class="col-md-6">
-          せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
-          忘れないうちにブログを書こう、みんなに報告しよう！
+          <div class="header2">
+            せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
+            忘れないうちにブログを書こう、みんなに報告しよう！
+          </div>
         </div>
         <div class="col-md-3">
-          <%= link_to 'TRY !!', new_blog_path %>
+          <div class="header1">
+            <%= link_to 'TRY !!', new_blog_path %>
+          </div>
         </div>
       </div>
     </header>
