--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,10 +1,7 @@
-<div class="yama">
-  <img src="/images/yama.jpg" />
+<img src="/images/bbq.jpg" class="bbq" />
+<div class=try_index>
   <p>" TRY !! "をクリックするだけ🎶<p>
   <h2>新規ブログを作成する</h2>
-</div>
-
-<div class="new-blog-link">
   <%= link_to 'TRY !!', new_blog_path %>
 </div>
 <div class=past_blog>
