--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,7 +1,7 @@
 /*　画像~　*/
-.bbq {
+img.bbq {
   width: 100%;
-  height: 300px;
+  height: 400px;
   margin-top: 150px;
   position: fixed;
   background-size: cover;
@@ -11,10 +11,6 @@
 /*　~画像　*/
 
 /*　button~　*/
-
-div.btn-group {
-  background-color: #ff7f50;
-}
 
 div.square_btn{
   display: inline-block;
@@ -82,7 +78,7 @@ div.try_index {
   color: white;/*文字は白に*/
   font-weight: bold; /*太字に*/
   font-size: 2em;/*サイズ2倍*/
-  font-family:Quicksand, sans-serif;/*Google Font*/
+  font-family: Quicksand, sans-serif;/*Google Font*/
   top: 0;
   left: 0;
   margin: 50px 100px 0 0;
