--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -11,9 +11,9 @@
   <div class="content">本文</div>
   <div class="content_text">
     <%= @blog.content %>
-  </div>cd
+  </div>
   <a class="square_btn">
-    <%= form.submit  "登録する" %>
+    <%= form.submit "登録する" %>
     <%= form.submit "もどる", name: 'back' %>
   </a>
 <% end %>
