--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -10,6 +10,10 @@ img.bbq {
 }
 /*　~画像　*/
 
+div.description {
+  margin-top: 150px;
+}
+
 /*　button~　*/
 
 div.square_btn{
@@ -81,7 +85,7 @@ div.try_index {
   font-family: Quicksand, sans-serif;/*Google Font*/
   top: 0;
   left: 0;
-  margin: 50px 100px 0 0;
+  margin: 200px 100px 0 0;
 }
 
 div.past_blog {
