--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,6 @@
-<h1>ブログ画面詳細</h1>
+<div class="description">
+  <h1>ブログ画面詳細</h1>
+</div>
 <div class="title">タイトル</div>
 <div class="title_text">
   <%= @blog.title %>
