--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>ブログ編集</h1>
-
+<div class="description">
+  <h1>ブログ編集</h1>
+</div>
 <%= form_with(model: @blog, local: true) do |form| %>
   <% if @blog.errors.any? %>
     <div id="error_explanation">
