--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -15,7 +15,7 @@ header {
 
 
 
-.header_text1 {
+div.header_text1 {
   color: #fff;
   display: block;
   text-decoration: none;
@@ -24,14 +24,14 @@ header {
   margin: 40px 0 40px 0;
 }
 
-.header_text2 {
+div.header_text2 {
   color: #fff;
   text-align: left;
   height: 150px;
   margin: 40px 0 40px 0;
 }
 
-.header_text3 {
+div.header_text3 {
   display: block;
   padding: 10px;
   text-decoration: none;
