--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,17 +1,7 @@
-/*　画像~　*/
-img.bbq {
-  width: 100%;
-  height: 400px;
-  margin-top: 150px;
-  position: fixed;
-  background-size: cover;
-  background-attachment: fixed;
-  object-fit: cover;
-}
-/*　~画像　*/
+
 
 div.description {
-  margin-top: 150px;
+  margin-top: 160px;
 }
 
 /*　button~　*/
@@ -45,6 +35,30 @@ body {
 }
 
 /*　~index　*/
+/*　画像~　*/
+img.bbq {
+  width: 100%;
+  height: 400px;
+  margin-top: 150px;
+  position: fixed;
+  background-size: cover;
+  background-attachment: fixed;
+  object-fit: cover;
+}
+/*　~画像　*/
+
+div.try_index {
+  position: absolute;
+  color: white;/*文字は白に*/
+  font-weight: bold; /*太字に*/
+  font-size: 2em;/*サイズ2倍*/
+  font-family: Quicksand, sans-serif;/*Google Font*/
+  top: 0;
+  left: 0;
+  margin: 200px 100px 0 0;
+  text-align: center;
+}
+
 div.blog_title_index, div.blog_content_index {
   text-align: left;
   color: #696969;
@@ -77,19 +91,8 @@ ul.blog-panel {
   padding: 10px;
 }
 
-div.try_index {
-  position: absolute;
-  color: white;/*文字は白に*/
-  font-weight: bold; /*太字に*/
-  font-size: 2em;/*サイズ2倍*/
-  font-family: Quicksand, sans-serif;/*Google Font*/
-  top: 0;
-  left: 0;
-  margin: 200px 100px 0 0;
-}
-
 div.past_blog {
-  margin-top: 100px;
+  margin-top: 680px;
 }
 
 div.blog-links {
