--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -44,6 +44,7 @@ img.bbq {
   background-size: cover;
   background-attachment: fixed;
   object-fit: cover;
+  float: left;
 }
 /*　~画像　*/
 
@@ -57,6 +58,10 @@ div.try_index {
   left: 0;
   margin: 200px 100px 0 0;
   text-align: center;
+}
+
+div.past_blog {
+  margin-top: 550px;
 }
 
 div.blog_title_index, div.blog_content_index {
@@ -89,10 +94,6 @@ ul.blog-panel {
   height: 200px;
   margin: 50px 0;
   padding: 10px;
-}
-
-div.past_blog {
-  margin-top: 680px;
 }
 
 div.blog-links {
