--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,18 @@
     <header>
       <div class="row">
         <div class="col-md-3">
-          <div id="header_text1">
+          <div class="header_text1">
             <a href="https://lit-gorge-63180.herokuapp.com/blogs">Let's ブログ</a>
           </div>
         </div>
         <div class="col-md-6">
-          <div id="header_text2">
+          <div class="header_text2">
             せっかく旅行にいったんだから！せっかく仕事頑張ったんだから！<br>
             忘れないうちにブログを書こう、みんなに報告しよう！
           </div>
         </div>
         <div class="col-md-3">
-          <div id="header_text3">
+          <div class="header_text1">
             <%= link_to 'TRY !!', new_blog_path %>
           </div>
         </div>
