--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -19,6 +19,13 @@ header {
 
 div.header_text1 {
   text-decoration: none;
+  font-size: 50%;
+  height: 150px;
+  margin: 40px 0 40px 0;
+}
+
+div.header_text1 a {
+  color: white;
 }
 
 div.header_text2 {
