--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -44,7 +44,7 @@ img.bbq {
   background-size: cover;
   background-attachment: fixed;
   object-fit: cover;
-  float: left;
+  float:
 }
 /*　~画像　*/
 
@@ -103,7 +103,7 @@ div.blog-links {
 /*　表題~　*/
 div.title, div.content {
   text-align: left;
-  width: 1100px;
+  width: 1200px;
   margin: 0% 15% 0% 15%;
   padding: 10px;
 }
@@ -112,7 +112,7 @@ div.title, div.content {
 /*　本文文章~　*/
 div.text_area {
   text-align: left;
-  width: 1100px;
+  width: 1200px;
   height: 300px !important;
   margin: 0% 15% 0% 15%;
   padding: 10px;
@@ -120,7 +120,7 @@ div.text_area {
 
 div.text_title {
   text-align: left;
-  width: 1100px;
+  width: 1200px;
   margin: 0% 15% 0% 15%;
   padding: 10px;
 }
@@ -129,7 +129,7 @@ div.text_title {
 /*　タイトル文章　確認~　*/
 div.title_text {
   text-align: left;
-  width: 1100px;
+  width: 1200px;
   margin: 0% 15% 0% 15%;
   border: solid 5px #ff7f50;
   background: #ffdab9;
@@ -140,7 +140,7 @@ div.title_text {
 /*　本文文章　確認~　*/
 div.content_text {
   text-align: left;
-  width: 1100px;
+  width: 1200px;
   margin: 0% 15% 0% 15%;
   padding: 10px;
   border: solid 5px #d3d3d3;
