--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -15,11 +15,9 @@ header {
   color: #fff;
 }
 
-
-
 div.header_text1 {
   text-decoration: none;
-  font-size: 50%;
+  font-size: 50px;
   height: 150px;
   margin: 40px 0 40px 0;
 }
