--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -30,5 +30,6 @@
     <%= form.submit %>
   </div>
 <% end %>
-
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<div class="blog_list">
+  <%= link_to "ブログ一覧画面にもどる", blogs_path %>
+</div>
