--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,4 +1,4 @@
-<img src="/public/images/bbq.jpg" class="bbq" />
+<img src="/public/images/bbq.png" class="bbq" />
 <div class=try_index>
   <p>" TRY !! "をクリックするだけ🎶<p>
   <h2>新規ブログを作成する</h2>
