--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -13,5 +13,6 @@
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
 <% end %>
-
-<%= link_to "ブログ一覧画面にもどる", blogs_path %>
+<div class="blog_list">
+  <%= link_to "ブログ一覧画面にもどる", blogs_path %>
+</div>
