--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,9 @@
 <img src="/public/images/bbq.png" class="bbq" />
 <div class=try_index>
   <p>" TRY !! "をクリックするだけ🎶<p>
+<div class=try_index>
   <h2>新規ブログを作成する</h2>
-  <%= link_to 'TRY !!', new_blog_path %>
+  <h2><%= link_to 'TRY !!', new_blog_path %></h2>
 </div>
 <div class=past_blog>
   過去のブログ一覧
