--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -36,7 +36,7 @@ body {
 
 /*　~index　*/
 /*　画像~　*/
-img.bbq {
+.bbq {
   width: 100%;
   height: 400px;
   margin-top: 150px;
@@ -46,13 +46,23 @@ img.bbq {
 }
 /*　~画像　*/
 
-div.try_index {
+div.try_index p {
   position: absolute;
-  color: white;/*文字は白に*/
+  color: black;/*文字は白に*/
   font-weight: bold; /*太字に*/
   font-size: 2em;/*サイズ2倍*/
   font-family: Quicksand, sans-serif;/*Google Font*/
   margin: 200px 100px 0 0;
+  text-align: left;
+}
+
+div.try_index h2 {
+  position: absolute;
+  color: black;/*文字は白に*/
+  font-weight: bold; /*太字に*/
+  font-size: 2em;/*サイズ2倍*/
+  font-family: Quicksand, sans-serif;/*Google Font*/
+  margin-top: 200px:
   text-align: center;
 }
 
