--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-3">
           <div class="header_text1">
-            <a href="https://lit-gorge-63180.herokuapp.com/blogs/new">Let's ブログ</a>
+            <a><%= link_to 'TRY !!', new_blog_path %></a>
           </div>
         </div>
       </div>
