--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,10 +1,10 @@
-<img src="/public/images/bbq.png" class="bbq" />
-<div class=try_index>
+<img src="/images/bbq.png" class="bbq" />
+<div class="try_index">
   <p>" TRY !! "をクリックするだけ🎶<p>
   <h2>新規ブログを作成する</h2>
   <h2><%= link_to 'TRY !!', new_blog_path %></h2>
 </div>
-<div class=past_blog>
+<div class="past_blog">
   過去のブログ一覧
 </div>
 
