--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -46,24 +46,23 @@ body {
 }
 /*　~画像　*/
 
-div.try_index p {
-  position: absolute;
-  color: black;/*文字は白に*/
-  font-weight: bold; /*太字に*/
-  font-size: 2em;/*サイズ2倍*/
-  font-family: Quicksand, sans-serif;/*Google Font*/
-  margin: 200px 100px 0 0;
-  text-align: left;
+div.try_index {
+    position: absolute;
+    left: 100px;
+    top: 30px;
+    color: #fff;
+    background: rgba(0,0,0,.6);
+    width: 100%;
+    max-width: 600px;
+    padding: 1em 0;
+    margin-top: 200px;
 }
-
-div.try_index h2 {
-  position: absolute;
-  color: black;/*文字は白に*/
-  font-weight: bold; /*太字に*/
-  font-size: 2em;/*サイズ2倍*/
-  font-family: Quicksand, sans-serif;/*Google Font*/
-  margin-top: 200px:
-  text-align: center;
+div.try_index p {
+    margin: 0;
+    padding: 0 0.8em;
+    font-size: 40px;
+    text-align: left;
+    font-family: Quicksand, sans-serif;
 }
 
 div.past_blog {
