--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,8 @@
 <img src="/images/bbq.png" class="bbq" />
 <div class="try_index">
-  <p>" TRY !! "をクリックするだけ🎶<p>
-  <h2>新規ブログを作成する</h2>
-  <h2><%= link_to 'TRY !!', new_blog_path %></h2>
+  <p>" TRY !! "をクリックするだけ🎶</p>
+  <p>新規ブログを作成する</p>
+  <p><%= link_to 'TRY !!', new_blog_path %></p>
 </div>
 <div class="past_blog">
   過去のブログ一覧
