--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,7 +2,7 @@
 <div class="try_index">
   <p>" TRY !! "をクリックするだけ🎶</p>
   <p>新規ブログを作成する</p>
-  <p><%= link_to 'TRY !!', new_blog_path %></p>
+  <a><%= link_to 'TRY !!', new_blog_path %></a>
 </div>
 <div class="past_blog">
   過去のブログ一覧
