--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -53,11 +53,10 @@ div.try_index {
     color: #fff;
     background: rgba(0,0,0,.6);
     width: 100%;
-    max-width: 600px;
     padding: 1em 0;
     margin-top: 200px;
 }
-div.try_index p {
+div.try_index p, div.try_index a {
     margin: 0;
     padding: 0 0.8em;
     font-size: 40px;
@@ -66,7 +65,7 @@ div.try_index p {
 }
 
 div.past_blog {
-  margin-top: 550px;
+  margin-top: 50px;
 }
 
 div.blog_title_index, div.blog_content_index {
