--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,7 @@
 <img src="/images/bbq.png" class="bbq" />
 <div class="try_index">
   <p>" TRY !! "をクリックするだけ🎶</p>
-  <p>新規ブログを作成する</p>
+  <a>新規ブログを作成しよう</a>
   <a><%= link_to 'TRY !!', new_blog_path %></a>
 </div>
 <div class="past_blog">
@@ -13,7 +13,6 @@
     <% @blogs.each do |blog| %>
       <nav class="col-md-4">
         <ul class="blog-panel">
-          <div class="blog_id"><%= blog.id %></div>
           <div class="blog_title_index">タイトル</div>
           <div class="blog_title_index2"><%= blog.title %></div>
           <div class="blog_content_index">本文</div>
