--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -66,6 +66,7 @@ div.try_index p, div.try_index a {
 
 div.past_blog {
   margin-top: 50px;
+  font-size: 35px;
 }
 
 div.blog_title_index, div.blog_content_index {
