--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,8 @@
 <img src="/images/bbq.png" class="bbq" />
 <div class="try_index">
   <p>" TRY !! "をクリックするだけ🎶</p>
-  <a>新規ブログを作成しよう</a>
-  <a><%= link_to 'TRY !!', new_blog_path %></a>
+  <a>新規ブログを作成しよう<br>
+    <%= link_to 'TRY !!', new_blog_path %></a>
 </div>
 <div class="past_blog">
   過去のブログ一覧
