--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -55,18 +55,30 @@ div.try_index {
     padding: 1em 0;
     margin-top: 200px;
 }
-div.try_index p, div.try_index a {
+
+div.try_index p {
     margin: 0;
     padding: 0 0.8em;
     font-size: 40px;
     text-align: left;
     color: #fff;
-    font-family: Quicksand, sans-serif;
+}
+
+div.try_index a {
+    margin: 0;
+    padding: 0 0.8em;
+    font-size: 40px;
+    text-align: center;
+    color: #fff;
 }
 
 div.past_blog {
   margin-top: 50px;
   font-size: 35px;
+}
+
+div.past_blog_list {
+  margin: 0 100px 0 100px;
 }
 
 div.blog_title_index, div.blog_content_index {
